--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
-/* Basic Reset */
 * {
     margin: 0;
+    border: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
