--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,3 +5,11 @@
     box-sizing: border-box;
     scroll-behavior: smooth;
 }
+
+body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      margin: 0;
+      padding: 20px;
+    }
+    
