add estilo do elemento label no style.css integrado ao index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,4 +24,9 @@ body {
       text-align: center;
       color: #333;
     }
+    label {
+      display: block;
+      margin-top: 15px;
+      font-weight: bold;
+    }
     
