--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,4 +49,7 @@ body {
     button:hover {
       background-color: #0056b3;
     }
-    
+    .message {
+      text-align: center;
+      margin-top: 20px;
+    }
