--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,8 @@ body {
       margin: 0;
       padding: 0;
       color: #333;
+      background: url(../images/bg.png);
+      background-size: cover;
     }
     .form-container {
       background-color: #fff;
