--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,10 @@ body {
       background: url(../images/bg.png);
       background-size: cover;
     }
+    h1 {
+      font-size: 2.5em;
+      color: #007bff;
+    }
     .form-container {
       background-color: #fff;
       padding: 20px;
