--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,9 +25,9 @@ body {
       margin: 0 auto;
       padding: 20px;
     }
-    h2 {
+    header {
       text-align: center;
-      color: #333;
+      padding-bottom: 20px;
     }
     label {
       display: block;
