--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,10 @@ body {
       border-radius: 8px;
       margin-bottom: 10px;
     }
+    .subtitulo {
+      font-size: 1.2em;
+      color: #ffffff;
+    }
     label {
       display: block;
       margin-top: 15px;
