--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,13 @@ body {
       font-size: 1.2em;
       color: #ffffff;
     }
+    form {
+      background: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+      background: rgba(255, 255, 255, 0.705); /* levemente transparente */
+    }
     label {
       display: block;
       margin-top: 15px;
