--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,7 @@ body {
       display: block;
       margin-top: 15px;
       font-weight: bold;
+      color: #007bff;
     }
     input, textarea, select {
       width: 100%;
