--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,5 +78,11 @@ body {
     .message {
       text-align: center;
       margin-top: 20px;
+      font-weight: bold;
     }
-    
+    footer {
+      text-align: center;
+      margin-top: 40px;
+      font-size: 0.9em;
+      color: #ffffff;
+    }
