--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,3 +112,12 @@ footer {
   margin-top: 20px;
   font-size: 1.2em;
 }
+
+#lista-chamados {
+  display: none;
+  margin-top: 30px;
+  background: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
+}
