--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,3 +121,7 @@ footer {
   border-radius: 8px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
 }
+
+#lista-chamados h3 {
+  margin-bottom: 15px;
+}
