--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,3 +130,9 @@ footer {
   list-style: none;
   padding-left: 0;
 }
+
+#lista-chamados li {
+  margin-bottom: 10px;
+  border-bottom: 1px dashed #ddd;
+  padding-bottom: 8px;
+}
