--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,8 @@ body {
   color: #333;
   background: url(../images/bg.png);
   background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 h1 {
@@ -51,7 +53,6 @@ form {
   border-radius: 8px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   background: rgba(255, 255, 255, 0.705);
-  /* levemente transparente */
 }
 
 label {
