--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
   margin: 0;
   padding: 0;
   color: #333;
-  background-color: #000000;
+  background-color: #c5c5c58a;
 }
 
 h1 {
@@ -27,7 +27,6 @@ h1 {
   max-width: 800px;
   margin: 0 auto;
   padding: 20px;
-  margin-top: 5.0em;
 }
 
 header {
