--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,11 +11,10 @@ body {
   width: 100vw;
   height: 100vh;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: #f2f4f8;
+  background-color: #213150;
   margin: 0;
   padding: 0;
   color: #333;
-  background-color: #c5c5c58a;
 }
 
 h1 {
